ux: use save icon without filters too

--- a/src/app/modals/core/photo-picker/photo-picker.html
+++ b/src/app/modals/core/photo-picker/photo-picker.html
@@ -173,7 +173,7 @@
         <div *ngIf="!webGLDetected && cropperReady" role="buttons" class="actions-buttons" text-center>
             <ion-button expand="full" shape="round" (click)="select()" padding-start padding-end>
                 {{'CORE.SAVE' | translate}}
-                <ion-icon slot="end" name="checkmark"></ion-icon>
+                <ion-icon slot="end" name="save"></ion-icon>
             </ion-button>
         </div>
     </div>
