ux: fix segment button for Ionic v4.0.0-beta.11

--- a/src/theme/toolbar.scss
+++ b/src/theme/toolbar.scss
@@ -65,6 +65,12 @@ ion-footer[role="browse"], ion-content[role="browse"], ion-footer[role="ad"], io
 
             position: relative;
 
+            &[class*="sc-ion-segment"] {
+                ion-segment-button {
+                    height: 100%;
+                }
+            }
+
             &.ion-segment-four-buttons {
                 ion-segment-button {
                     width: calc(100% / 4);
@@ -76,7 +82,6 @@ ion-footer[role="browse"], ion-content[role="browse"], ion-footer[role="ad"], io
                 color: $fluster-midnight-blue;
                 font-size: $fluster-text-normal;
                 --border-radius: 0;
-                height: 100%;
                 opacity: 1.0;
                 --border-width: 0;
 
@@ -94,7 +99,8 @@ ion-footer[role="browse"], ion-content[role="browse"], ion-footer[role="ad"], io
                 }
 
                 &.segment-button-checked {
-                    @include fluster-linear-gradient-variable(to bottom right, $fluster-peach1, $fluster-peach3);
+                    @include fluster-linear-gradient-variable-checked(to bottom right, $fluster-peach1, $fluster-peach3);
+                    --border-color-checked: transparent;
                     color: white;
                 }
 
