--- a/src/app/components/advertise/new-ad/new-ad-step-done/new-ad-step-done.scss
+++ b/src/app/components/advertise/new-ad/new-ad-step-done/new-ad-step-done.scss
@@ -33,8 +33,15 @@
     }
 }
 
-div.new-ad-button-done-display {
-    width: 100%;
+div.new-ad-done-actions {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+
+    app-big-button {
+        margin-left: 8px;
+        margin-right: 8px;
+    }
 }
 
 // Confetti
