feat(#6): chain admin appointments with wizard

--- a/src/app/components/advertise/new-ad/new-ad-step-done/new-ad-step-done.html
+++ b/src/app/components/advertise/new-ad/new-ad-step-done/new-ad-step-done.html
@@ -14,7 +14,7 @@
                                     [icon]="'home'" [label]="'NEW_AD.STEP_DONE.DISPLAY'">
                     </app-big-button>
 
-                    <app-big-button (clicked)="shareAd()" [adDisplay]="true"
+                    <app-big-button (clicked)="navigateToAdminAppointments()" [adDisplay]="true"
                                     [bigButton]="false" [mediumButton]="true" [mediumButtonAds]="true"
                                     [icon]="'calendar'" [label]="'NEW_AD.STEP_DONE.APPOINTMENTS'">
                     </app-big-button>
