--- a/src/app/pages/advertise/admin-appointments/admin-appointments.page.html
+++ b/src/app/pages/advertise/admin-appointments/admin-appointments.page.html
@@ -1,9 +1,17 @@
 <ion-header>
   <ion-toolbar>
+
     <ion-buttons slot="start">
-      <ion-button (click)="backToPreviousSlide()">
+      <ion-menu-toggle *ngIf="menuToggle" auto-hide="false">
+        <ion-button>
+          <ion-icon slot="icon-only" name="menu"></ion-icon>
+        </ion-button>
+      </ion-menu-toggle>
+
+      <ion-button (click)="backToPreviousSlide()" *ngIf="!menuToggle" class="custom-back-button">
         <ion-icon name="arrow-back"></ion-icon>
       </ion-button>
+
     </ion-buttons>
 
     <ion-title>FLUSTER</ion-title>
