--- a/src/app/pages/advertise/new-ad/new-ad.page.html
+++ b/src/app/pages/advertise/new-ad/new-ad.page.html
@@ -69,7 +69,7 @@
     </ion-slide>
 
     <ion-slide *ngIf="loadSlideDone">
-      <app-new-ad-step-done [slider]="slider" (notifiyGoToAdDetailCall)="navigateToAdDetail()" (notifyPrev)="backToPreviousSlide()"></app-new-ad-step-done>
+      <app-new-ad-step-done [slider]="slider" (notifiyGoToAdDetailCall)="navigateToAdDetail()" (notifiyGoToAdminAppointments)="navigateToAdminAppointments()" (notifyPrev)="backToPreviousSlide()"></app-new-ad-step-done>
     </ion-slide>
 
   </ion-slides>
