feat(#6): improve menu toggle display

--- a/src/app/pages/advertise/admin-appointments/admin-appointments.page.html
+++ b/src/app/pages/advertise/admin-appointments/admin-appointments.page.html
@@ -2,7 +2,7 @@
   <ion-toolbar>
 
     <ion-buttons slot="start">
-      <ion-menu-toggle *ngIf="menuToggle" auto-hide="false">
+      <ion-menu-toggle *ngIf="menuToggle">
         <ion-button>
           <ion-icon slot="icon-only" name="menu"></ion-icon>
         </ion-button>
