ux: add class custom-back-button to custom back buttons

--- a/src/app/modals/browse/select-interest/select-interest.html
+++ b/src/app/modals/browse/select-interest/select-interest.html
@@ -5,7 +5,7 @@
                 <ion-icon slot="icon-only" name="close"></ion-icon>
             </ion-button>
 
-            <ion-button (click)="backToPreviousSlide()" *ngIf="!firstSlide">
+            <ion-button (click)="backToPreviousSlide()" *ngIf="!firstSlide" class="custom-back-button">
                 <ion-icon slot="icon-only" name="arrow-back"></ion-icon>
             </ion-button>
         </ion-buttons>
