--- a/src/app/pages/advertise/new-ad/new-ad.page.html
+++ b/src/app/pages/advertise/new-ad/new-ad.page.html
@@ -8,7 +8,7 @@
         </ion-button>
       </ion-menu-toggle>
 
-      <ion-button (click)="backToPreviousSlide()" *ngIf="!isDone()">
+      <ion-button (click)="backToPreviousSlide()" *ngIf="!isDone()" class="custom-back-button">
         <ion-icon name="arrow-back"></ion-icon>
       </ion-button>
     </ion-buttons>
