--- a/src/app/pages/core/first-choice/first-choice.page.html
+++ b/src/app/pages/core/first-choice/first-choice.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start" *ngIf="!firstSlide">
-      <ion-button (click)="backToPreviousSlide()">
+      <ion-button (click)="backToPreviousSlide()" class="custom-back-button">
         <ion-icon name="arrow-back"></ion-icon>
       </ion-button>
     </ion-buttons>
