--- a/src/app/modals/browse/item-appointments/item-appointments.html
+++ b/src/app/modals/browse/item-appointments/item-appointments.html
@@ -22,24 +22,24 @@
                 <ion-grid class="flex-grid">
                     <ion-row>
                         <ion-col size="12">
-                            <h1 text-center padding-top>{{'FIRST_CHOICE.LETS_GO' | translate}}</h1>
+                            <h1 text-center padding-top>{{'ITEM_APPOINTMENTS.FLEXIBILITY.TITLE' | translate}}</h1>
 
-                            <h2 text-center padding-top>{{'FIRST_CHOICE.WHAT_DO_YOU_WANT_TO_DO' | translate}}</h2>
+                            <h2 text-center padding-top>{{'ITEM_APPOINTMENTS.FLEXIBILITY.SUB_TITLE' | translate}}</h2>
                         </ion-col>
                     </ion-row>
 
                     <ion-row>
                         <ion-col size="6" text-center>
-                            <app-big-button (clicked)="match()"
-                                            [bigButtonItem]="true" [bigButtonEnabled]="matchSelected" [bigButtonDisabled]="scheduleSelected"
-                                            [icon]="'ios-send'" [label]="'APPLICANT_SELECTION.REJECT_REQUEST'">
+                            <app-big-button (clicked)="matchOnly()"
+                                            [bigButtonItem]="true" [bigButtonEnabled]="matchOnlySelected" [bigButtonDisabled]="scheduleSelected"
+                                            [icon]="'ios-send'" [label]="'ITEM_APPOINTMENTS.FLEXIBILITY.MATCH_ONLY'">
                             </app-big-button>
                         </ion-col>
 
                         <ion-col size="6" text-center>
                             <app-big-button (clicked)="schedule()"
-                                            [bigButtonItem]="true" [bigButtonEnabled]="scheduleSelected" [bigButtonDisabled]="matchSelected"
-                                            [icon]="'calendar'" [label]="'APPLICANT_SELECTION.REJECT_REQUEST'">
+                                            [bigButtonItem]="true" [bigButtonEnabled]="scheduleSelected" [bigButtonDisabled]="matchOnlySelected"
+                                            [iconSrc]="scheduleSelected ? 'assets/img/ico_calendar_send-white.svg' : 'assets/img/ico_calendar_send-dark-blue.svg'" [label]="'ITEM_APPOINTMENTS.FLEXIBILITY.SCHEDULE'">
                             </app-big-button>
                         </ion-col>
                     </ion-row>
@@ -55,11 +55,11 @@
 
         <ion-slide>
             <div class="flex-content" padding>
-                <h2 text-center *ngIf="isItemFlat()">
+                <h2 text-center *ngIf="isItemFlat()" padding>
                     {{ 'ITEM_APPOINTMENTS.VIEWING_WHEN_TEXT_FLAT' | translate:{who: item.user.facebook.firstName == null ? '' : item.user.facebook.firstName} }}
                 </h2>
 
-                <h2 text-center *ngIf="isItemShare()">
+                <h2 text-center *ngIf="isItemShare()" padding>
                     {{ 'ITEM_APPOINTMENTS.VIEWING_WHEN_TEXT_SHARE' | translate:{who: item.user.facebook.firstName == null ? '' : item.user.facebook.firstName} }}
                 </h2>
 
