feat(#2): ux color

--- a/src/theme/buttons.scss
+++ b/src/theme/buttons.scss
@@ -53,6 +53,7 @@ ion-content[role="browse"] {
   ion-button[disabled].button {
     --background: #{$fluster-light-grey};
     --color: #{$fluster-dark-grey};
+    --ion-color-medium: #{$fluster-medium-grey};
   }
 }
 
