--- a/src/app/components/advertise/pick-ads-appointments/pick-ads-appointments.scss
+++ b/src/app/components/advertise/pick-ads-appointments/pick-ads-appointments.scss
@@ -3,74 +3,78 @@
 @import "../../../../theme/mixins";
 
 div.date-picker-scroller {
-    div.date-picker {
-        div.appointment-empty {
-            opacity: 0.4;
-        }
-
-        div.disabled-date {
-            color: $fluster-grey-blue;
-        }
+  div.date-picker {
+    div.appointment-empty {
+      opacity: 0.4;
     }
+
+    div.disabled-date {
+      color: $fluster-grey-blue;
+    }
+  }
 }
 
 #datePickerScrollY {
-    height: 40%;
+  height: 40%;
 
-    ion-list {
-        margin-bottom: 0;
+  ion-list {
+    margin-bottom: 0;
 
-        ion-item {
-            p {
-                font-size: $fluster-text-big;
-                color: white;
+    ion-item {
+      p {
+        font-size: $fluster-text-big;
+        color: white;
 
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
 
-                app-display-date {
-                    width: 50%;
-                }
-
-                ion-button[fill="solid"] {
-                    --border-width: 1px;
-
-                    ion-icon, ion-label {
-                        color: white;
-                    }
-                }
-
-                .appointment-in-the-past {
-                    color: $fluster-dark-blue;
-                }
-
-                .appointment-already-taken, .appointment-selected.appointment-already-taken, .appointment-selected.appointment-in-the-past.appointment-already-taken {
-                    color: $fluster-peach1;
-                }
-            }
+        app-display-date {
+          width: 50%;
         }
+
+        ion-button[fill="solid"] {
+          --border-width: 1px;
+
+          ion-icon, ion-label {
+            color: white;
+          }
+        }
+
+        .appointment-selected, &.appointment-selected.appointment-in-the-past {
+          font-weight: $font-weight-normal;
+        }
+
+        .appointment-in-the-past {
+          color: $fluster-dark-blue;
+        }
+
+        .appointment-already-taken, .appointment-selected.appointment-already-taken, .appointment-selected.appointment-in-the-past.appointment-already-taken {
+          color: $fluster-peach1;
+        }
+      }
     }
+  }
 }
 
 @include iphone4 {
-    #datePickerScrollY {
-        height: 28%;
-        margin-bottom: 10px;
-    }
+  #datePickerScrollY {
+    height: 28%;
+    margin-bottom: 10px;
+  }
 }
 
 @include iphone5 {
-    #datePickerScrollY {
-        height: 34%;
-        margin-bottom: 10px;
-    }
+  #datePickerScrollY {
+    height: 34%;
+    margin-bottom: 10px;
+  }
 }
 
 @include nexus5 {
-    div#datePickerScrollY {
-        height: 34%;
-        margin-bottom: 10px;
-    }
+  div#datePickerScrollY {
+    height: 34%;
+    margin-bottom: 10px;
+  }
 }
