--- a/src/app/components/browse/item-appointments-date-picker/item-appointments-date-picker.scss
+++ b/src/app/components/browse/item-appointments-date-picker/item-appointments-date-picker.scss
@@ -35,12 +35,12 @@ div.date-picker-scroller {
         align-items: center;
         width: 100%;
 
-        app-display-date {
-          width: 50%;
-        }
+        ion-button {
+          --width: 18rem;
 
-        ion-button[fill="solid"] {
-          --border-width: 1px;
+          &[fill="solid"] {
+            --border-width: 1px;
+          }
         }
 
         .appointment-selected {
