feat(#2): font-size smoother

--- a/src/app/components/advertise/pick-ads-appointments/pick-ads-appointments.scss
+++ b/src/app/components/advertise/pick-ads-appointments/pick-ads-appointments.scss
@@ -22,7 +22,7 @@ div.date-picker-scroller {
 
     ion-item {
       p {
-        font-size: $fluster-text-big;
+        font-size: $fluster-text-special;
         color: white;
 
         display: flex;
@@ -32,6 +32,12 @@ div.date-picker-scroller {
 
         ion-button {
           --width: 18rem;
+          --height: initial;
+          font-size: $fluster-text-normal;
+
+          ion-label {
+            font-size: $fluster-text-normal;
+          }
 
           &[fill="solid"] {
             --border-width: 1px;
