--- a/src/app/components/browse/item-appointments-date-picker/item-appointments-date-picker.html
+++ b/src/app/components/browse/item-appointments-date-picker/item-appointments-date-picker.html
@@ -37,7 +37,7 @@
     </div>
 </div>
 
-<div #datePickerScrollY scrollY="true" id="datePickerScrollY" margin-top>
+<div #datePickerScrollY scrollY="true" id="datePickerScrollY">
     <ion-list no-padding (swipe)="swipeDatePicker($event)">
         <ion-item *ngFor="let currentAppointment of currentAppointments;" text-center>
             <p>
