--- a/src/theme/fluster-variables.scss
+++ b/src/theme/fluster-variables.scss
@@ -32,6 +32,7 @@ $fluster-border-radius: 4px;
 // Fonts variables
 $fluster-text-small: 1.2rem;
 $fluster-text-normal: 1.4rem;
+$fluster-text-special: 1.6rem;
 $fluster-text-big: 2rem;
 
 $font-weight-light: 300;
