feat(#2): fix space

--- a/src/app/components/advertise/pick-ads-appointments/pick-ads-appointments.scss
+++ b/src/app/components/advertise/pick-ads-appointments/pick-ads-appointments.scss
@@ -30,6 +30,10 @@ div.date-picker-scroller {
         align-items: center;
         width: 100%;
 
+        app-display-date {
+          width: 50%;
+        }
+
         ion-button {
           --width: 18rem;
           --height: initial;
