--- a/src/app/modals/browse/item-appointments/item-appointments.html
+++ b/src/app/modals/browse/item-appointments/item-appointments.html
@@ -13,11 +13,11 @@
 <ion-content role="browse" [scrollY]="false" padding>
 
     <ng-container *ngIf="loaded">
-        <h2 text-center *ngIf="isItemFlat()" padding>
+        <h2 text-center *ngIf="isItemFlat()" padding no-margin>
             {{ 'ITEM_APPOINTMENTS.VIEWING_WHEN_TEXT_FLAT' | translate:{who: item.user.facebook.firstName == null ? '' : item.user.facebook.firstName} }}
         </h2>
 
-        <h2 text-center *ngIf="isItemShare()" padding>
+        <h2 text-center *ngIf="isItemShare()" padding no-margin>
             {{ 'ITEM_APPOINTMENTS.VIEWING_WHEN_TEXT_SHARE' | translate:{who: item.user.facebook.firstName == null ? '' : item.user.facebook.firstName} }}
         </h2>
 
