refactor(#2): move package, no need of parent subfolder

--- a/src/app/components/advertise/pick-applicant-appointments/pick-applicant-appointments.scss
+++ b/src/app/components/advertise/pick-applicant-appointments/pick-applicant-appointments.scss
@@ -1,6 +1,6 @@
-@import "../../../../../theme/fluster-variables";
-@import "../../../../../theme/media-queries";
-@import "../../../../../theme/mixins";
+@import "../../../../theme/fluster-variables";
+@import "../../../../theme/media-queries";
+@import "../../../../theme/mixins";
 
 div.date-picker-scroller {
     div.date-picker {
