--- a/src/app/components/browse/pick-item-appointments/pick-item-appointments.html
+++ b/src/app/components/browse/pick-item-appointments/pick-item-appointments.html
@@ -1,1 +1,4 @@
-<app-item-appointments-date-picker *ngIf="hasItemAppointment()" [favoriteDates]="initScheduledDates?.favoritesDates" [unavailableAppointmentDates]="initScheduledDates?.unavailableAppointmentDates" [rejectedAppointmentDates]="initScheduledDates?.rejectedAppointmentDates" (notifiySelected)="schedule($event)"></app-item-appointments-date-picker>
+<app-item-appointments-date-picker *ngIf="hasItemAppointment()" [advertiserDates]="initScheduledDates?.advertiserDates"
+                                   [unavailableAppointmentDates]="initScheduledDates?.unavailableAppointmentDates"
+                                   [rejectedAppointmentDates]="initScheduledDates?.rejectedAppointmentDates"
+                                   (notifiySelected)="schedule($event)"></app-item-appointments-date-picker>
